# CCTSim

./: .gitignore  CMakeLists.txt  CustomIterationLog_8hh.html  CustomIterationLog_8hh.js  CustomIterationLog_8hh__dep__incl.map  CustomIterationLog_8hh__dep__incl.md5  CustomIterationLog_8hh__incl.map  CustomIterationLog_8hh__incl.md5  CustomIterationLog_8hh_source.html  README.md  annotated.html  annotated_dup.js  classCube3DFactory-members.html  classCube3DFactory.html  classCube3DFactory.js  classCustomIterationLog-members.html  classCustomIterationLog.html  classCustomIterationLog.js  classCustomIterationLog__inherit__graph.map  classCustomIterationLog__inherit__graph.md5  classInputCCTWindingAngle-members.html  classInputCCTWindingAngle.html  classInputCCTWindingAngle.js  classInputCCTWindingAngle__coll__graph.map  classInputCCTWindingAngle__inherit__graph.md5  classInputLayerPitch-members.html  classInputLayerPitch.html  classInputLayerPitch.js  classInputLayerPitch__coll__graph.map  classInputLayerPitch__coll__graph.md5  classInputLayerPitch__inherit__graph.map  classInputLayerPitch__inherit__graph.md5  classInputMultipoleScaling-members.html  classInputMultipoleScaling.html  classInputMultipoleScaling.js  classInputMultipoleScaling__coll__graph.map  classInputMultipoleScaling__coll__graph.md5  classInputMultipoleScaling__inherit__graph.map  classInputMultipoleScaling__inherit__graph.md5  classInputParamRangeInterface-members.html  (+233 more)
doxygen/: Doxyfile  mainpage.dox
examples/: cct.json  example.cpp
include/: CustomIterationLog.hh  constants.h  cube3d_factory.hh  input_cct_winding_angle.hh  input_layer_pitch.hh  input_multipole_scaling.hh  input_param_range_interface.h  input_pathconnectv2_uvw.hh  input_pathconnectv2_value.hh  json_range.hh  output_a_multipole.hh  output_b_multipole.hh  output_criterion_interface.h  output_max_curvature.hh  output_max_von_mises.hh  output_max_z.hh  output_min_z.hh  output_pathconnectv2_strain_energy.hh  parameter_search.h
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  (+23 more)
(+10 files in other folders)
